cmake_minimum_required(VERSION 3.29)
project(Excepciones2)

set(CMAKE_CXX_STANDARD 20)
add_executable(Excepciones2_Ejercicio1
        "Ejercicio 1/main.cpp"
        "Ejercicio 1/main.h"
)
add_executable(Excepciones2_Ejercicio2
        "Ejercicio 2/main.cpp"
        "Ejercicio 2/main.h"

)
add_executable(Excepciones2_Ejercicio3
        "Ejercicio 3/main.cpp"
        "Ejercicio 3/main.h"
)
add_executable(Excepciones2_Ejercicio4
        "Ejercicio 4/main.cpp"
        "Ejercicio 4/main.h"
)
add_executable(Excepciones2_Ejercicio5
        "Ejercicio 5/main.cpp"
        "Ejercicio 5/main.h"
)
add_executable(Excepciones2_Ejercicio6
        "Ejercicio 6/main.cpp"
        "Ejercicio 6/main.h"
        "Ejercicio 6/main.cpp"
)
add_executable(Excepciones2_Ejercicio7
        "Ejercicio 7/main.cpp"
        "Ejercicio 7/main.h"
        "Ejercicio 7/main.cpp"
)